generic way of generating PDF files from DTO objects + generating not very pretty PDF for financial reports

--- a/project/project-core/src/main/webapp/documents/financialReports/financialReportsTable.xhtml
+++ b/project/project-core/src/main/webapp/documents/financialReports/financialReportsTable.xhtml
@@ -62,6 +62,9 @@
                                                     <p:commandLink styleClass="btn btn-danger btn-xs" update="financialReportsTableId" ajax="true" action="#{financialReportsTableBean.removeReport(report)}">
                                                         <i class="glyphicon glyphicon-minus"></i> Usuń
                                                     </p:commandLink>
+                                                    <p:commandLink styleClass="btn btn-success btn-xs" update="financialReportsTableId" ajax="true" action="#{financialReportsTableBean.generatePdfReport(report)}">
+                                                        Generuj PDF
+                                                    </p:commandLink>
                                                 </p:column>
                                             </p:dataTable>
                                         </h:form>
