Dalsze prace nad dokumentami, dodanie beana ze stałymi elementami, ustawianie odpowiednich danych dla konkretnych widoków, etc etc

--- a/project/project-core/src/main/webapp/contractor/contractorTable.xhtml
+++ b/project/project-core/src/main/webapp/contractor/contractorTable.xhtml
@@ -24,7 +24,7 @@
                                     <div class="box-header">
                                         <h3 class="page-header col-xs-12">
                                             Kontrahenci
-                                            <small class="pull-right">Data: 02/02/2013</small>
+                                            <small class="pull-right">Data: #{constantElements.currentDateValue}</small>
                                         </h3>
                                     </div>
                                     <div class="box-body">
