--- a/project/project-core/src/main/webapp/documents/warehouse/externalIncoming.xhtml
+++ b/project/project-core/src/main/webapp/documents/warehouse/externalIncoming.xhtml
@@ -4,9 +4,14 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:p="http://primefaces.org/ui"
-	xmlns:cc="http://java.sun.com/jsf/composite/components">
+	xmlns:cc="http://java.sun.com/jsf/composite/components"
+	xmlns:f="http://xmlns.jcp.org/jsf/core">
 
 	<h:body>
+		<f:metadata>
+			<f:viewAction action="#{externalInvoiceController.afterObjectSet('PZ')}" />
+		</f:metadata>
+
 		<ui:composition template="../../layout/main-template.xhtml">
 			<ui:define name="content">
 				<aside class="right-side"> 
@@ -26,7 +31,7 @@
 									<div class="box-header">
 										<h3 class="page-header col-xs-12">
 											Przyjęcie zewnętrzne (PZ) : #{externalInvoiceController.sourceObject.symbol}
-											<small class="pull-right">Data: #{externalInvoiceController.currentDate}</small>
+											<small class="pull-right">Data: #{constantElements.currentDateValue}</small>
 										</h3>
 									</div>
 									<div class="box-body">
