--- a/project/project-core/src/main/webapp/goods/addEditGood.xhtml
+++ b/project/project-core/src/main/webapp/goods/addEditGood.xhtml
@@ -109,7 +109,7 @@
                                             <div class="col-xs-2">
                                                 <label>Cena Magazynowa Netto</label>
                                                 <p:inputText id="priceMagNet" type="text"
-                                                             value="#{goodAddEditBean.good.priceMagNet}"
+                                                             value="#{goodAddEditBean.good.prices.priceMagNet}"
                                                              styleClass="form-control text-right"
                                                              placeholder="Wprowadz cene">
                                                     <f:convertNumber type="number" groupingUsed="true"
@@ -122,7 +122,7 @@
                                             <div class="col-xs-2">
                                                 <label>Cena Magazynowa Brutto</label>
                                                 <p:inputText id="priceMagGross" type="text"
-                                                             value="#{goodAddEditBean.good.priceMagGross}"
+                                                             value="#{goodAddEditBean.good.prices.priceMagGross}"
                                                              styleClass="form-control text-right"
                                                              placeholder="Wprowadz cene">
                                                     <f:convertNumber type="number" groupingUsed="true"
@@ -158,7 +158,7 @@
                                                         <p:column style="font-weight: bold;">Cena A</p:column>
                                                         <p:column>
                                                             <p:inputText id="priceANet"
-                                                                         value="#{goodAddEditBean.good.priceANet}"
+                                                                         value="#{goodAddEditBean.good.prices.priceANet}"
                                                                          styleClass="form-control text-right">
                                                                 <f:convertNumber type="number" groupingUsed="true"
                                                                                  minFractionDigits="2" pattern="#0.00"/>
@@ -169,7 +169,7 @@
                                                         </p:column>
                                                         <p:column>
                                                             <p:inputText id="priceAGross"
-                                                                         value="#{goodAddEditBean.good.priceAGross}"
+                                                                         value="#{goodAddEditBean.good.prices.priceAGross}"
                                                                          styleClass="form-control text-right">
                                                                 <f:convertNumber type="number" groupingUsed="true"
                                                                                  minFractionDigits="2" pattern="#0.00"/>
@@ -183,7 +183,7 @@
                                                         <p:column style="font-weight: bold;">Cena B</p:column>
                                                         <p:column>
                                                             <p:inputText id="priceBNet"
-                                                                         value="#{goodAddEditBean.good.priceBNet}"
+                                                                         value="#{goodAddEditBean.good.prices.priceBNet}"
                                                                          styleClass="form-control text-right">
                                                                 <f:convertNumber type="number" groupingUsed="true"
                                                                                  minFractionDigits="2" pattern="#0.00"/>
@@ -194,7 +194,7 @@
                                                         </p:column>
                                                         <p:column>
                                                             <p:inputText id="priceBGross"
-                                                                         value="#{goodAddEditBean.good.priceBGross}"
+                                                                         value="#{goodAddEditBean.good.prices.priceBGross}"
                                                                          styleClass="form-control text-right">
                                                                 <f:convertNumber type="number" groupingUsed="true"
                                                                                  minFractionDigits="2" pattern="#0.00"/>
@@ -208,7 +208,7 @@
                                                         <p:column style="font-weight: bold;">Cena C</p:column>
                                                         <p:column>
                                                             <p:inputText id="priceCNet"
-                                                                         value="#{goodAddEditBean.good.priceCNet}"
+                                                                         value="#{goodAddEditBean.good.prices.priceCNet}"
                                                                          styleClass="form-control text-right">
                                                                 <f:convertNumber type="number" groupingUsed="true"
                                                                                  minFractionDigits="2" pattern="#0.00"/>
@@ -219,7 +219,7 @@
                                                         </p:column>
                                                         <p:column>
                                                             <p:inputText id="priceCGross"
-                                                                         value="#{goodAddEditBean.good.priceCGross}"
+                                                                         value="#{goodAddEditBean.good.prices.priceCGross}"
                                                                          styleClass="form-control text-right">
                                                                 <f:convertNumber type="number" groupingUsed="true"
                                                                                  minFractionDigits="2" pattern="#0.00"/>
