--- a/project/project-core/src/main/webapp/documents/warehouse/internalDocumentList.xhtml
+++ b/project/project-core/src/main/webapp/documents/warehouse/internalDocumentList.xhtml
@@ -32,7 +32,7 @@
 									</div>
 									<div class="box-body">
 										<h:form>
-											<cc:warehouseInvoice controller="#{externalInvoiceListController}" editable="true"/>
+											<cc:warehouseInvoiceList controller="#{internalInvoiceListController}" editable="true"/>
 										</h:form>
 									</div>
 								</div>
