--- a/project/project-core/src/main/webapp/documents/service/serviceFixSummary.xhtml
+++ b/project/project-core/src/main/webapp/documents/service/serviceFixSummary.xhtml
@@ -27,7 +27,7 @@
                             <div class="box">
                                 <div class="box-header">
                                     <h3 class="page-header col-xs-12">
-                                        Zgłoszenie serwisowe: <h:outputText
+                                        Podsumowanie naprawy: <h:outputText
                                             value="#{serviceRepairOrderTemplateBean.document.symbol}"/>
                                         <small class="pull-right">Data: <h:outputText
                                                 value="#{serviceRepairOrderTemplateBean.document.documentDate}">
