Sale documents - half of the way. Still some issues with selecting good or contractor, the issue here are the dates inputs but i don`t now yet how to fix it.

--- a/project/project-core/src/main/webapp/documents/warehouse/externalOutgoing.xhtml
+++ b/project/project-core/src/main/webapp/documents/warehouse/externalOutgoing.xhtml
@@ -39,7 +39,8 @@
 											<p:panel visible="#{externalInvoiceController.visible}">
 												<cc:warehouseInvoiceTop controller="#{externalInvoiceController}" />
 												<p:spacer style="height : 10px"/>
-												<cc:invoiceGoodList controller="#{externalInvoiceController}" />
+												<cc:invoiceGoodList controller="#{externalInvoiceController}"
+																	widthValue="107%"/>
 												<p:spacer style="height : 10px"/>
 												<cc:warehouseInvoiceBottom controller="#{externalInvoiceController}" />
 												<p:spacer style="height : 10px"/>
