--- a/project/project-core/src/main/webapp/documents/warehouse/externalOutgoing.xhtml
+++ b/project/project-core/src/main/webapp/documents/warehouse/externalOutgoing.xhtml
@@ -46,8 +46,8 @@
 												<p:spacer style="height : 10px"/>
 												<cc:buttonBox controller="#{externalInvoiceController}"/>
 											</p:panel>
-											<p:panel visible="#{goodListController.visible}">
-												<cc:goodChooser controller="#{goodListController}"
+											<p:panel visible="#{editPageableListController.visible}">
+												<cc:goodChooser controller="#{editPageableListController}"
 																action="#{externalInvoiceController.addGood()}"
 																editable="false"/>
 											</p:panel>
