--- a/project/project-core/src/main/webapp/goods/goodList.xhtml
+++ b/project/project-core/src/main/webapp/goods/goodList.xhtml
@@ -28,7 +28,7 @@
                                     </div>
                                     <div class="box-body">
                                         <h:form>
-                                            <cc:goodList controller="#{goodListController}" editable="true"/>
+                                            <cc:goodList controller="#{editPageableListController}" editable="true"/>
                                         </h:form>
                                     </div>
                                 </div>
