--- a/project/project-core/src/main/webapp/documents/saleDocuments/vatInvoice.xhtml
+++ b/project/project-core/src/main/webapp/documents/saleDocuments/vatInvoice.xhtml
@@ -135,8 +135,8 @@
                                             </div>
                                         </p:panel>
                                         <p:spacer style="height : 10px"/>
-                                        <p:panel visible="#{editPageableListController.visible}">
-                                            <cc:goodChooser controller="#{editPageableListController}"
+                                        <p:panel visible="#{goodListController.visible}">
+                                            <cc:goodChooser controller="#{goodListController}"
                                                             action="#{vatInvoiceController.addGood()}"
                                                             editable="false"/>
                                         </p:panel>
